syntax = "proto3";

package payment;

// type ID int64;

message Transfer {
    // ID pengirim
    int64 from = 1;
    // ID penerima
    int64 to = 2;
    // Jumlah yang akan ditransfer
    double amount = 3;
    // Waktu transfer
    uint64 timestamp = 4;
    // nomor auxiliary untuk memastikan operasi idempoten
    uint64 seed = 5;
}

message Credit {
    int64 account = 1;
    double amount = 2;
    uint64 timestamp = 3;
    uint64 seed = 4;
}


message Debit {
    int64 account = 1;
    double amount = 2;
    uint64 timestamp = 3;
    uint64 seed = 4;
}

message PublishInvoice {
    string id_ref = 1;
    int64 issuer = 2;
    int64 to = 3;
    double discount = 4;
    double amount = 5;
    string notes = 6;
    repeated InvoiceItem items = 7;
    uint64 timestamp = 8;
    uint64 seed = 9;
}

message InvoiceItem {
    string name = 1;
    double price = 2;
}
